fix code highlighting overflowing

--- a/sass/ergo.scss
+++ b/sass/ergo.scss
@@ -75,6 +75,11 @@ p,li,ul {
 pre {
     border-radius: 0.25em;
     padding: 0.65em;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 @keyframes slidein {
